--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline{
                 script{
                     
                     checkout(scm)
-                    println("msgggggggggggg")
+                    println("msggggggggg")
                     println(currentBuild.changeSets)
 
                     
