--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline{
                     
                     checkout(scm)
                     println("msggggggggg")
-                    println(currentBuild.changeSets)
+                    println(currentBuild.rawBuild.changeSets)
 
                     
                    
