--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,8 @@ pipeline{
                     
                     checkout(scm)
                     println("msggggggggg")
-                    println(currentBuild.rawBuild.changeSets)
+                    env.GIT_COMMIT_MSG = bat (script: 'git log -1 --pretty=%B ${GIT_COMMIT}', returnStdout: true).trim()
+                    println(env.GIT_COMMIT_MSG)
 
                     
                    
